--- a/index.html
+++ b/index.html
@@ -620,4 +620,4 @@ blockquote {
 }
 	
 </style></head><body><article id="d9506023-81d8-45d2-8de3-281aaceb93e8" class="page sans"><header><h1 class="page-title">Welcome</h1></header><div class="page-body"><p id="2ca828d2-740c-469f-90bc-ebadfa497440" class="">
-</p><figure id="96b8a319-869f-430d-b8c9-fdc80821a913" class="image"><a href="Welcome%2096b8a319869f430db8c9fdc80821a913/icn.png"><img style="width:2048px" src="Welcome%2096b8a319869f430db8c9fdc80821a913/icn.png"/></a></figure></div></article></body></html>
+</p><figure id="96b8a319-869f-430d-b8c9-fdc80821a913" class="image"><a href="assets/icn.png"><img style="width:2048px" src="assets/icn.png"/></a></figure></div></article></body></html>
